--- a/my-app/package.json
+++ b/my-app/package.json
@@ -19,13 +19,14 @@
     "@angular/platform-browser": "~13.0.0",
     "@angular/platform-browser-dynamic": "~13.0.0",
     "@angular/router": "~13.0.0",
-    "@swimlane/ngx-charts": "^20.0.0",
+    "@ng-bootstrap/ng-bootstrap": "^11.0.0",
     "@types/d3-scale": "^4.0.3",
     "@types/d3-selection": "^3.0.5",
     "bootstrap": "^4.6.2",
     "bootstrap-icons": "^1.10.3",
     "jquery": "^3.6.4",
     "ng-circle-progress": "^1.6.0",
+    "ngx-bootstrap": "^8.0.0",
     "popper.js": "^1.16.1",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
