--- a/my-app/package.json
+++ b/my-app/package.json
@@ -15,6 +15,7 @@
     "@angular/common": "~13.0.0",
     "@angular/compiler": "~13.0.0",
     "@angular/core": "~13.0.0",
+    "@angular/fire": "^7.2.1",
     "@angular/forms": "~13.0.0",
     "@angular/platform-browser": "~13.0.0",
     "@angular/platform-browser-dynamic": "~13.0.0",
@@ -24,6 +25,7 @@
     "@types/d3-selection": "^3.0.5",
     "bootstrap": "^4.6.2",
     "bootstrap-icons": "^1.10.3",
+    "firebase": "^9.4.0",
     "jquery": "^3.6.4",
     "ng-circle-progress": "^1.6.0",
     "ngx-bootstrap": "^8.0.0",
